--- a/add_product.html
+++ b/add_product.html
@@ -40,7 +40,7 @@
 </div>
     <div class="main-dvdForm" id="dvd">
         <label for="size">Size (MB)</label>
-        <input type="number" name="size" id="dvd">
+        <input type="number" name="size" id="dvd-size">
         <p class="main-dvdForm-p">Please provide size in "SIZE (MB)" format</p>
     </div>
     <div class="main-furnitureForm" id="furniture">
@@ -49,12 +49,12 @@
     <label for="size">Width (CM)</label>
         <input type="number" name="width" id="furniture_width">
     <label for="size">Length (CM)</label>
-        <input type="number" name="length" id="furniture_lenght">
+        <input type="number" name="length" id="furniture_length">
         <p class="main-furnitureForm-p">Please provide dimentions in "HeightxWidthxLenght" format</p>
     </div>
     <div class="main-bookForm" id="book">
     <label for="weight">Weight (KG)</label>
-        <input type="number" name="weight" id="dvd">
+        <input type="number" name="weight" id="book-weight">
         <p class="main-dvdForm-p">Please provide weight in "WEIGHT (KG)" format</p>
     </div>
     <input class="main-saveBtn"  type="submit" value="SAVE">
